files/.xmonad/xmonad.errors
Stack has not been tested with GHC versions above 8.6, and using 8.8.3, this may fail
Stack has not been tested with Cabal versions above 2.4, but version 3.0.1.0 was found, this may fail

xmonad.hs:162:7: error:
    • Couldn't match type ‘Maybe ()’ with ‘()’
      Expected type: X ()
        Actual type: X (Maybe ())
    • In a stmt of a 'do' block: sequenceA selection
      In the expression:
        do selection <- Dmenu.menuMapArgs "rofi" ["-dmenu", "-i"]
                          $ M.fromList specialCommands
           sequenceA selection
      In an equation for ‘promptExecute’:
          promptExecute
            = do selection <- Dmenu.menuMapArgs "rofi" ["-dmenu", ....]
                                $ M.fromList specialCommands
                 sequenceA selection
    |
162 |       sequenceA selection
    |       ^^^^^^^^^^^^^^^^^^^
